<resources>
    <string name="app_name">Playdate</string>
    <string name="facebook_app_id">276324066222471</string>
    <string name="fb_login_protocol_scheme">fb276324066222471</string>
    <string name="failed_to_start_app">Failed to start app</string>
    <string name="edit_profile_button"><u>edit profile</u></string>
    <string name="preference_button"><u>preference</u></string>
    <string name="welcome_title">Hi,</string>
    <string name="answer_questions_title">Answer questions</string>
    <string name="delete_dialod_msg">Are you sure?</string>
    <string name="delete_dialog_title">Delete user</string>
    <string name="chat">Chat</string>
    <string name="playdate_descr_2">You can tap their picture to see their profile</string>
    <string name="playdate_descr_3">Press button below to make a new play date</string>
    <string name="make_playdate_button">Make Play Date</string>
    <string name="playdate_descr_1">No playdates yet:(</string>
    <string name="playdate_descr">This is your play date from %s %s. Say hi!</string>
    <string name="playdate_title">Meet %s!</string>
    <string name="playdate_fail_dialog_title">No Soup For You!</string>
    <string name="playdate_fail_dialog_descr">You\'re out of play dates for the day. Please check back later!</string>
    <string name="error">Error</string>
    <string name="stats">stats</string>
    <string name="gender">Gender</string>
    <string name="q_amp_a"><![CDATA[Q & A]]></string>
    <string name="no">No</string>
    <string name="distance">Distance</string>
    <string name="distance_format">%.0f</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="report_a_bug_feedback">Report a bug / Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="account">ACCOUNT</string>
    <string name="repot">Report</string>
    <string name="report_user">Report user</string>
    <string name="feels_like_spam">Feels like spam</string>
    <string name="inappropriate_behavior">Inappropriate behavior</string>
    <string name="never_mind">Never mind</string>
    <string name="save">Save</string>
    <string name="non_binary">Non-binary</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="all">All</string>
    <string name="age">Age</string>
    <string name="none_selected">None Selected</string>
    <string name="name">Name</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="push_notifications">Push notifications</string>
    <string name="acknow_dialog_title">Acknowledgements</string>
    <string name="acknow_dialog_descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="vision_dialod_title">Vision</string>
    <string name="vision_dialod_descr">Our vision is to make it easy to meet new people and have fun</string>
    <string name="yes">yes</string>
    <string name="answers_button">view answers</string>
    <string name="rate_app">Rate app</string>
    <string name="vision">Vision</string>
    <string name="twitter">Twitter</string>
    <string name="website">Website</string>
    <string name="faq">FAQ</string>
    <string name="ind1">Welcome to playdate!   A blazing fast way to meet some new!</string>
    <string name="ind2">Simply log in and edit your profile</string>
    <string name="ind3">Next, edit your preferences</string>
    <string name="ind4">Don\'t forget the questions too!</string>
    <string name="ind5">Tap the \"make play date\" button</string>
    <string name="ind6">And you\'ll instantly get a play date!</string>
    <string name="ind7">Chat is open for 24 hours. Happy blazing!</string>
</resources>
